# charmed-temporal-uats

./: .gitignore  README.md  cos.goss.yaml  goss.yaml  justfile  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: custom-concierge.yaml  uats.yaml
tests/: __init__.py  conftest.py  helpers.py  test_cos.py  test_ingress.py  test_namespace_isolation.py
worker_go/: go.mod  go.sum  helloworld.go  rockcraft.yaml
worker_go/scripts/: start-worker.sh
worker_go/worker/: main.go
worker_python/: pyproject.toml  rockcraft.yaml
worker_python/scripts/: start-worker.sh
worker_python/src/: worker.py
worker_python/src/activities/: __init__.py  hello_world_activity.py
worker_python/src/workflows/: __init__.py  hello_world_workflow.py
